fixup! Make banner button smaller on mobile

--- a/www/docs/style/sass/layout/_header.scss
+++ b/www/docs/style/sass/layout/_header.scss
@@ -428,13 +428,15 @@ $badge-horizontal-shadow-desktop: -8px;
             display: flex;
             flex-direction: column;
             align-items: center;
+            row-gap: 0.5em;
+            padding: 0.75em 1em;
+            font-size: 0.9rem;
         }
-        
+
         a.button {
             font-size: 0.75em !important;
-            padding: 0.4em 0.8em 0.35em 0.8em !important;
+            padding: 0.4em 0.8em 0.45em 0.8em !important;
             margin-left: 0 !important;
-            margin-top: 0.75em !important;
             display: inline-block;
         }
     }
